fix low contrast

--- a/assets/css/dark.css
+++ b/assets/css/dark.css
@@ -12,7 +12,7 @@
     }
 
     .hero p {
-        color: #c3c3c3;
+        color: #848484;
     }
 
     .logo {
